DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
[1.2.0 released - 8.14.2007]===================================================
2007-07-08 patrick     Debug-enabled code linked against the release runtime
                       on Windows is now named the same as optimized code.
                       The debug DLLs are installed in the "debug"
                       subdirectory.
                       NEW VERSION: 1.1.13
2007-06-27 patrick     Changed the preprocessor identification of debug versus
                       optimized to look for TWEEK_DEBUG or JUGGLER_DEBUG
                       instead of _DEBUG (and TWEEK_OPT or JUGGLER_OPT instead
                       of _OPT).
                       NEW VERSION: 1.1.12
2007-01-30 patrick     Eliminated the need to set TWEEK_BASE_DIR on Windows to
                       run applications.
                       NEW VERSION: 1.1.11
2006-11-15 patrick     Replaced the use of vpr::ReturnStatus with bool in
                       tweek::CorbaManager, tweek::SubjectManagerImpl, and
                       tweek::CorbaService.
                       NEW VERSION: 1.1.10
2006-10-01 patrick     Updated for VPR 1.1.35.
                       NEW VERSION: 1.1.9
2006-10-01 patrick     Updated for VPR 1.1.31.
                       NEW VERSION: 1.1.8
2006-08-03 dshipton    Use flagpoll for metadata
                       NEW VERSION: 1.1.7
2006-07-12 patrick     Changed the DLL name to include the version as part of
                       the base library name on Windows. Implemented automatic
                       linking of the Tweek library.
                       NEW VERSION: 1.1.6
2006-06-25 patrick     Added support for building universal binaries on Mac
                       OS X.
                       NEW VERSION: 1.1.5
2006-05-26 dshipton    Make and install fully versioned libraries.
                       NEW VERSION: 1.1.4